--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     compile 'com.balysv:material-ripple:1.0.2'
     //IMAGE LOAD
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
