--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://dl.bintray.com/hani-momanii/maven" }
+       // maven { url "https://dl.bintray.com/hani-momanii/maven" }
         maven {
             url 'https://maven.google.com/'
             name 'Google'
