--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,6 +152,78 @@
             android:screenOrientation="portrait"
             android:theme="@style/MemberViewTheme" />
 
+        <!--SHSS-->
+        <activity
+            android:name=".membershss.MembersSHSSDirectory"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MyCompatTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".membershss.MemberSearchResultsSHSSActivity" />
+        </activity>
+
+        <activity
+            android:name=".membershss.NewMembersSHSSDirectory"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MyCompatTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".membershss.MemberSearchResultsSHSSActivity" />
+        </activity>
+
+        <activity
+            android:name=".membershss.MemberSearchResultsSHSSActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.MyCompatTheme">
+
+            <!-- to identify this activity as "searchable" -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name=".membershss.MemberListSHSSActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyCompatTheme">
+
+            <!-- to identify this activity as "searchable" -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".membershss.MemberSearchResultsSHSSActivity" />
+        </activity>
+        <activity
+            android:name=".membershss.MemberViewSHSSActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/MemberViewTheme" />
+
+
         <activity
             android:name=".activity.EkalChaptersActivity"
             android:screenOrientation="portrait"
